<resources>
    <string name="app_name">diary</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_note">Create Note</string>
    <string name="title">항목</string>
    <string name="detail">세부 내용</string>
    <string-array name="note_type">
        <item>도보</item>
        <item>자차</item>
        <item>대중교통</item>
    </string-array>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_edit__note">Edit Note</string>
    <string name="New">Create New Note</string>
    <string name="back">Back to Main</string>
    <string name="save">Save Note</string>
    <string name="edit">Edit Note</string>
    <string name="discard">Discard Note</string>
    <string name="note_type_text">Note Type:</string>
    <string name="title_activity_alert">Alert</string>
    <string name="Not_Set">Not Set</string>
    <string name="hour_minutes">HH:mm</string>
    <string name="alert_title">title</string>
    <string name="added_alert">An Alert can be added</string>
    <string name="rodId">rowID</string>
    <string name="Alertnotifty">"Alert: "</string>
    <string name="alerttitle">title</string>
    <string name="delete_title">Delete Selected Note</string>
    <string name="delete_message">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rodID">rowID</string>
    <string name="rowID">rowID</string>
    <string name="row_id">rowID</string>
    <string name="d_title">diary_title</string>
    <string name="intent_row_id">rowID</string>
    <string name="row_id_long">rowID</string>
    <string name="alarm_active">An Alert can be added!</string>
    <string name="row_id_log">rowID</string>
    <string name="title_hint">Enter Title</string>
    <string name="hint_description">Enter Description</string>
    <string name="set_alert">Set Alert</string>
    <string name="textview_date">Select Date</string>
    <string name="txt_time">Enter Time:</string>
    <string name="txt_edit_hint">Enter Title</string>
    <string name="detail_hint">Enter Description</string>
    <string name="type_note">Note Type:</string>
    <string name="view_title">Large Text</string>
    <string name="view_detail">Medium Text</string>
    <string name="note_type">Medium Text</string>
    <string name="type_list_entry">메모구분</string>
    <string name="time_vie">시간</string>
    <string name="alarmtext">Alert: </string>
    <string name="dateformate">yyyy/MM/dd</string>
    <string name="Not_Set_Alert">Not Set</string>
    <string name="ok">Ok</string>
    <string name="title_msg">title</string>
    <string name="titttle">title</string>
    <string name="test">test</string>

    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
</resources>
