<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinnerNoteType"
            android:layout_alignParentBottom="true">

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            </GridLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">
                <TextView
                    android:id="@+id/sub_title"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="소제목"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txttitle"
                    android:maxLength="25"
                    android:text="@string/txt_edit_hint"
                    android:layout_below="@+id/btnBack"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:singleLine="true"
                    android:editable="true" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/cost"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="비용"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtcost"
                    android:maxLength="25"
                    android:hint="비용을 입력해주세요"
                    android:layout_below="@+id/btnBack"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:singleLine="true"
                    android:editable="true" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView4" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:text="@string/detail_hint"
                    android:layout_below="@+id/txttitle"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:singleLine="false"
                    android:editable="true"
                    android:lines="5"
                    android:maxLength="140"
                    android:nestedScrollingEnabled="false" />
            </ScrollView>

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/type_note"
                    android:id="@+id/txtNoteType"
                    android:layout_below="@+id/description"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerNoteType"
                    android:entries="@array/note_type"
                    android:layout_below="@+id/description"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toRightOf="@+id/txttitle"
                    android:layout_toEndOf="@+id/txttitle" />
            </GridLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_alert"
                    android:id="@+id/checkBox"
                    android:layout_below="@+id/spinnerNoteType"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:enabled="false"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/textview_date"
                    android:id="@+id/txtDate" />

                <DatePicker
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:id="@+id/datePicker"
                    android:clickable="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txt_time"
                    android:id="@+id/txtTime" />

                <TimePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/timePicker"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
